<resources>
    <string name="app_name">Percobaan2</string>
    <string name="logusername">Username</string>
    <string name="logPassword">Password</string>
    <string name="Reqfullnama">Full Nama</string>
    <string name="Requsername">Username</string>
    <string name="Reqtanggallahir">Tanggal Lahir</string>
    <string name="Reqemail">Email</string>
    <string name="Reqpassword">Password</string>
    <string name="Reqkonfirmasi">Confirm Pasword</string>
    <string name="Reqgender">Gender</string>
    <string name="Reqnohp">No Hp</string>
    <string name="Reqalamat">Alamat</string>
    <string name="Reqbtn">Register</string>
    <string-array name="gender_array">
        <item>Laki-laki</item>
        <item>Perempuan</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="daftar_mhs">
        <item>holed led</item>
        <item>akram junaidi</item>
        <item>soli boy</item>
        <item>reyo arya</item>
        <item>deden sandika</item>
        <item>sagita github</item>
        <item>lukman hanfi</item>
        <item>ilham hambali</item>
        <item>dendi satrio</item>
        <item>ali mubarok</item>
        <item>yek arab </item>
        <item>roy kiyosi</item>
        <item>akbar maulud</item>
        <item>mavir a</item>
        <item>tyo oyoy</item>
        <item>fiqo oke</item>

    </string-array>

    <string name="Main_image_description">Main_image_description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>