<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_account_circle_24"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_fullname"
            android:drawableLeft="@drawable/baseline_drive_file_rename_outline_24"
            android:layout_marginTop="20dp"
            android:hint="@string/Reqfullnama"
            android:drawablePadding="20dp"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/req_username"
            android:drawableLeft="@drawable/baseline_account_box_24"
            android:layout_marginTop="5dp"
            android:hint="@string/Requsername"
            android:drawablePadding="15dp"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_tgllahir"
            android:layout_marginTop="5dp"
            android:hint="@string/Reqtanggallahir"
            android:drawableLeft="@drawable/tanggal"
            android:drawablePadding="15dp"
            android:padding="16dp"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_email"
            android:drawableLeft="@drawable/email"
            android:layout_marginTop="5dp"
            android:hint="@string/Reqemail"
            android:drawablePadding="15dp"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_password"
            android:drawableLeft="@drawable/baseline_lock_outline_24"
            android:layout_marginTop="5dp"
            android:hint="@string/Reqpassword"
            android:drawablePadding="15dp"
            android:inputType="textPassword"
            android:padding="16dp"
        android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_konfirmasi"
            android:drawableLeft="@drawable/confirm"
            android:layout_marginTop="5dp"
            android:hint="@string/Reqkonfirmasi"
            android:drawablePadding="20dp"
            android:padding="16dp"
            android:inputType="textPassword"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
           android:layout_marginLeft="40dp"
            android:padding="20dp"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_nohp"
            android:drawableLeft="@drawable/hp"
            android:layout_marginTop="5dp"
            android:hint="@string/Reqnohp"
            android:drawablePadding="15dp"
            android:inputType="phone"
            android:padding="16dp"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_alamat"
            android:drawableLeft="@drawable/alamat"
            android:layout_marginTop="5dp"
            android:hint="@string/Reqalamat"
            android:drawablePadding="15dp"
            android:padding="16dp"
            android:textSize="16sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/req_btn"
            android:text="@string/Reqbtn"
            android:backgroundTint="#3F51B5"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>
